Fixed div text wrapping bug

--- a/CSS Modules/messages.module.css
+++ b/CSS Modules/messages.module.css
@@ -119,6 +119,7 @@
 
   .message {
     margin-left: 20px;
+    word-wrap: break-word;
   }
   .label {
     color: white;
